[package]
name = "metaflac"
version = "0.2.6"
authors = ["James Hurst <james@jameshurst.ca>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jameshurst/rust-metaflac"
repository = "https://github.com/jameshurst/rust-metaflac"
documentation = "https://jameshurst.github.io/rust-metaflac"
description = "A library for reading and writing FLAC metadata."
keywords = ["flac", "audio", "parser", "metadata"]
edition = "2018"

[lib]
name = "metaflac"
crate-type = ["rlib"]

[dependencies]
hex = "0.4.2"
byteorder = "1.3.4"
