[package]
name = "metaflac"
version = "0.2.7"
authors = ["James Hurst <james@jameshurst.ca>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jameshurst/rust-metaflac"
repository = "https://github.com/jameshurst/rust-metaflac"
documentation = "https://jameshurst.github.io/rust-metaflac"
description = "A library for reading and writing FLAC metadata."
keywords = ["flac", "audio", "parser", "metadata"]
edition = "2018"

[dependencies]
byteorder = "1.3.4"
hex = "0.4.2"

serde = { version = "1.0.217", features = ["derive"], optional = true }

[features]
serde = ["dep:serde"]

[dev-dependencies]
serde_json = "1.0.134"
